Added option to Show/Hide Notification Badges (also in Alphabetic List)

--- a/AppLibraryControllerSettings/Resources/en.lproj/Root.strings
+++ b/AppLibraryControllerSettings/Resources/en.lproj/Root.strings
@@ -1,23 +1,25 @@
 {
+	APP_LIBRARY_CONTROLLER = "App Library Controller";
 	ENABLE_TWEAK = "Enable Tweak";
 	UI_STYLE = "UI Style";
 	DEFAULT = Default;
 	LIGHT = "Light";
 	DARK = "Dark";
-	APP_LIBRARY_MODE_ = "App Library Mode:";
-	SELECT_MODE = "Select Mode";
+	APP_LIBRARY_MODE = "App Library Mode";
 	ENABLED = Enabled;
 	DISABLED = Disabled;
 	ALPHABETIC_LIST_ONLY = "Alphabetic List only";
-	CATEGORIES_AND_ALPHABETIC_LIST = "Categories and Alphabetic List";
+	APP_LIBRARY_SETTINGS_ = "App Library Settings:";
+	GESTURE = Gesture;
+	NOTIFICATION_BADGES = "Notification Badges";
 	ALPHABETIC_LIST_SETTINGS_ = "Alphabetic List Settings:";
 	ROUNDED_SEARCH_FIELD = "Rounded Search Field";
 	LIST_HEADERS = "List Headers";
 	CATEGORIES_SETTINGS_ = "Categories Settings:";
-	CATEGORIES_LABELS = "Categories Labels";
-	CATEGORIES_BACKGROUND = "Categories Background";
-	TITLES_INSIDE_FOLDERS = "Titles Inside Folders";
-	LABELS_INSIDE_FOLDERS = "Labels Inside Folders";
+	LABELS = Labels;
+	BACKGROUND = Background;
+	FOLDERS_SETTINGS_ = "Folders Settings:";
+	TITLES = Titles;
 	RESET_SETTINGS = "Reset Settings";
 	RELATED_LINKS = "Related Links";
 	SOURCE_CODE = "Source Code";
